examples/ui-harness/tests/ui/borrowed_value_does_not_live_long_enough.rs
// #region missing-lifetime
fn longest(left: &str, right: &str) -> &str {
    if left.len() >= right.len() {
        left
    } else {
        right
    }
}
// #endregion missing-lifetime

fn main() {
    let _ = longest("borrow", "lifetime");
}
